# 30122-project-cappy-funding

./: 2016.py  2016_cleaned_funding.csv  2016_data.csv  2016_final.csv  2016_us_funding.csv  2016_us_state_finances.csv  2017.csv  2017_cleaned_funding  2017_expenditure_by_state_p1.xlsx  2017_expenditure_by_state_p2.xlsx  2017_final.csv  2018.csv  2018_cleaned_expenditure  2018_cleaned_funding.csv  2018_expenditure_by_state_p1.xlsx  2018_expenditure_by_state_p2.xlsx  2019.csv  2019_expenditure_by_state_p1.xlsx  2019_expenditure_by_state_p2.xlsx  2019_final.csv  2019_per_capita_analysis.csv  2020_cleaned_expenditure.csv  2020_cleaned_funding.csv  2020_expenditure_by_state_p1.xlsx  2020_expenditure_by_state_p2.xlsx  2020_us_funding.csv  AK_2017.csv  AL_2017.csv  README.md  USA_2017.csv  USAspending_data.csv  __init__.py  analyze_data.py  app.py  cappy_graph.ipynb  clean_census.py  clean_funding.py  clean_notebook.ipynb  clean_test.ipynb  create_stacked_charts.py  (+26 more)
cappy-funding/: app.py
cappy-funding/visualization/: scatterplots.py
cappy_funding/: app.py
cappy_funding/clean_and_analyze/: analyze_data.py  clean_census.py  clean_funding.py  utils_clean_and_analyze.py
cappy_funding/fund_data/: 2018_performance.csv  2019_performance.csv  2020_performance.csv
clean_and_analyze/: analyze_data.py  clean_census.py  clean_funding.py  clean_try.ipynb  combine.ipynb  experiment.ipynb  output_testing.ipynb  utils_clean_and_analyze.py
data/clean_data/: graph.py  (+15 more)
fund_data/: 2018_final.csv  scrape_funds.py
funding_app/: __main__.py  app.py
visualization/: stacked_charts.py
(+49 files in other folders)
