[tool.poetry]
name = "database"
version = "0.1.0"
description = ""
authors = ["Yujie"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"
requests = "^2.28.2"
pathlib = "^1.0.1"
dash = "^2.8.1"
matplotlib = "^3.7.1"
wordcloud = "^1.8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
